2007-04-04  Elijah Newren  <newren gmail com>

	* modulesets/gnome-2.18.modules:
	* modulesets/gnome-external-deps-2.20.modules:
	Oops, fix the path in the makeinstallargs of the last commit

2007-04-04  Elijah Newren  <newren gmail com>

	Switch to a tarball version of a mozilla module, including making
	the necessary changes to workaround problems in the build process
	of mozilla modules.  Fixes #417767.

	* jhbuild/modtypes/autotools.py (parse_autotools): Also handle
	special casing of ${libdir} in autogenargs, makeargs, and
	makinstallargs, in addition to the handling for ${prefix}

	* modulesets/gnome-2.18.modules:
	* modulesets/gnome-external-deps-2.20.modules:
	Switch from a cvs version of mozilla to firefox 2.0 tarball.
	Would use xulrunner, but there haven't been any recent enough
	releases and it's months after they were supposed to come out.

2007-04-04  Elijah Newren  <newren gmail com>

	* modulesets/bootstrap.modules:
	Remove pyrex from meta-bootstrap.  Should have done that with the
	commit yetsterday.  Oops.

2007-04-03  Elijah Newren  <newren gmail com>

	* modulesets/freedesktop-2.18.modules:
	* modulesets/gnome-external-deps-2.20.mdoules:
	Update dbus-python to 0.80.2.

	* modulesets/bootstrap.modules:
	Remove pyrex; it isn't needed anymore.

2007-04-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py, patches/libvolume_id_Makefile.patch
	modulesets/gnome-external-deps-2.20.modules: added new makeinstallargs
	and skip-autogen attributes to <autotools> nodes; required to build
	libvolume_id, required for newer HAL versions.  Added libvolume_id (and
	patch required to build it) and updated HAL to 0.5.9 in GNOME 2.20
	external deps moduleset.

2007-04-01  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.18.modules: Added tinymail and modest.

2007-03-31  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched gnome-keyring to gnome-2-18.

2007-03-31  Frederic Peters  <fpeters@0d.be>
