@@ -1,3 +1,8 @@
+2007-04-07  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/mozillamodule.py: respect MAKE environment variable
+	(closes: #419279, patch by David Adam)
+
 2007-04-04  Elijah Newren  <newren gmail com>
 
 	* modulesets/gnome-2.18.modules:
